WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272237
REGRESSION (
275503@main
): Double space in Mail compose on iOS doesn’t insert period
https://bugs.webkit.org/show_bug.cgi?id=272237
Summary
REGRESSION (275503@main): Double space in Mail compose on iOS doesn’t insert ...
Wenson Hsieh
Reported
2024-04-05 11:01:25 PDT
rdar://125852636
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-04-05 11:38:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26910
EWS
Comment 2
2024-04-05 20:59:12 PDT
Committed
277151@main
(ac57d4f365e1): <
https://commits.webkit.org/277151@main
> Reviewed commits have been landed. Closing PR #26910 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug